Size widget area to prevent off screen bugginess

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -18,6 +18,14 @@ body {
   margin: 20px auto;
 }
 
+#module-area {
+  width: 74%;
+  height: 75%;
+  position: absolute;
+  display: inline-block;
+  float: left;
+}
+
 /****************
   Main Nav
 ****************/
