--- a/app/assets/stylesheets/module.css
+++ b/app/assets/stylesheets/module.css
@@ -1,10 +1,28 @@
-body {
-  position: relative;
+/***************
+ Generic Module
+***************/
+
+.hidden {
+  display: none;
 }
 
-.draggable {
+.module {
+  display: inline-block;
+}
+
+/*************
+ Test Module
+*************/
+
+.test-module {
   width: 150px;
   height: 150px;
-  padding: 0.5em;
-  background-color: blue;
+  display: inline-block;
+  border: 1px solid black
+}
+
+.module-header {
+  width: 100%;
+  height: 40px;
+  background-color: #EBEBEC;
 }
